--- a/music/music.html
+++ b/music/music.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=0.3, maxmum-scale=1.0, minimum-scale=0.3">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=0.3, maximum-scale=0.3, minimum-scale=0.3">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>K-music</title>
     <link rel="stylesheet" href="./musicCss/index.css">
