--- a/music/register.html
+++ b/music/register.html
@@ -126,7 +126,7 @@
           <div class="br1"></div>
           
         
-        <div><button class="submit"><i>提交</i></button></div>
+        <div><a href="./music.html"><button class="submit" >提交</button></a></div>
 
       </div>
       <img src=./ok.png v-if="pw1.length>5"  class="apple1"></img>
